# pydantic-serdes

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: base_models.md  configuration-and-extensibility.md  contributing.md  dumpers.md  getting_started.md  loaders.md  the_global_data_store.md
pydantic_serdes/: __init__.py  config.py  custom_collections.py  datastore.py  decorators.py  dumpers.py  exceptions.py  loaders.py  models.py  utils.py
serial_bus/: __init__.py  config.py  custom_collections.py  datastore.py  dumpers.py  exceptions.py  loaders.py  models.py  utils.py
serial_bus/tests/: converting.py  models.py  test_data_conversion.py  test_models.py  utils.py
serial_weaver/: __init__.py  config.py  custom_collections.py  datastore.py  dumpers.py  exceptions.py  loaders.py  models.py  utils.py
serial_weaver/tests/: converting.py  models.py  test_data_conversion.py  test_models.py
serial_weaver/tests/mocked_data/: customers.json  customers.yaml  products.yaml  rendered_customers.txt
serial_weaver/tests/templates/: customer.j2
tests/: models.py  test_data_conversion.py  test_models.py  utils.py
tests/mocked_data/: customers.toml
