[tool.poetry]
name = "pydantic_serdes"
version = "1.0.5"
description = "A Python package that standardizes data serialization and deserialization from/to pydantic models."
authors = ["André Lima"]
documentation= "https://github.com/theandrelima/pydantic-serdes"
keywords=["serialization", "deserialization", "parsing", "pydantic-models", "serialized-to-pydantic", "pydantic-to-serialized"]
license = "MIT"
readme = "README.md"
packages = [{include = "pydantic_serdes"}]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.6.1"
pyyaml = "^6.0.1"
sortedcontainers = "^2.4.0"
jinja2 = "^3.1.3"
toml = "^0.10.2"
email-validator = "^2.1.0.post1"
idna = ">=3.15,<4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mdformat = "^0.7.17"
pytest = "^9.0.3"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
